--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Bootstrap demo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -17,22 +17,54 @@
 
 <body>
     <header class="my-bg-botfooter text-light">
-        <nav class="container">
+        <nav class="container p-3">
             navbar
         </nav>
     </header>
 
     <main>
-        <section class="my-bg-verdeacqua text-white">
+        <section class="my-bg-verdeacqua text-white p-4">
             <div class="container">
-                hero
-            </div>
+           <div class="row justify-content-center ">
+                <div class="col-5">
+                    <div class="card-img m-auto w-50 px-5 ">
+                        <img src="img/avatar.svg" alt="avatar" class="img-fluid ">
+                    </div>
+
+                    <div class="text-center ">
+                        <h1 class="text-uppercase my-fs-0">Start Boostrap </h1>
+                    </div>
+
+                    <div class="row justify-content-center">
+                        <div class="col-3 ">
+                            <div class="bg-white high-line my-3 "></div>
+                        </div>
+                        <div class="col-1"><i class="fa-solid fa-star my-2"></i></div>
+                        <div class="col-3">
+                            <div class="bg-white high-line my-3 "></div>
+                        </div>
+                    </div>
+
+                    <div>
+                        <h2 class="text-uppercase fs-6 text-center">graphic artist - web designer - illustrator</h2>
+                    </div>
+                </div>
+                
+                
+           </div>
+        </div>
         </section>
+
+
         <section class="bg-white">
             <div class="container text-center">
                 <h2>Portfolio</h2>
                 <div>star</div>
                 <div class="row">
+                    <div class="col-12">1</div>
+                    <div class="col-12">2</div>
+                    <div class="col-12">3</div>
+
                     <div class="col-12">1</div>
                     <div class="col-12">2</div>
                     <div class="col-12">3</div>
