--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
                     <div class="row justify-content-center">
                         <div class="col-3 ">
-                            <div class="bg-white high-line my-3 "></div>
+                            <div class="bg-white high-line  rounded-4 my-3 "></div>
                         </div>
                         <div class="col-1"><i class="fa-solid fa-star my-2"></i></div>
                         <div class="col-3">
-                            <div class="bg-white high-line my-3 "></div>
+                            <div class="bg-white high-line  rounded-4 my-3 "></div>
                         </div>
                     </div>
 
@@ -57,18 +57,56 @@
 
 
         <section class="bg-white">
-            <div class="container text-center">
-                <h2>Portfolio</h2>
-                <div>star</div>
-                <div class="row">
-                    <div class="col-12">1</div>
-                    <div class="col-12">2</div>
-                    <div class="col-12">3</div>
-
-                    <div class="col-12">1</div>
-                    <div class="col-12">2</div>
-                    <div class="col-12">3</div>
+            <div class="container text-center ">
+                <div class="row justify-content-center">
+                    <div class="col-10 py-5">
+                         <h2 class="text-uppercase fs-1">Portfolio</h2>
+                <div class="row justify-content-center">
+                    <div class="col-2 ">
+                        <div class="bg-black high-line rounded-4 my-3 "></div>
+                    </div>
+                    <div class="col-1"><i class="fa-solid fa-star my-2"></i></div>
+                    <div class="col-2">
+                        <div class="bg-black high-line  rounded-4 my-3 "></div>
+                    </div>
                 </div>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="card-img py-3">
+                            <img src="img/cabin.png" alt="" class="img-fluid rounded">
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card-img py-3">
+                            <img src="img/cake.png" alt="" class="img-fluid rounded">
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card-img py-3">
+                            <img src="img/circus.png" alt="" class="img-fluid rounded">
+                        </div>
+                    </div>
+
+                    <div class="col-4">
+                        <div class="card-img py-3">
+                            <img src="img/game.png" alt="" class="img-fluid rounded">
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card-img py-3">
+                            <img src="img/safe.png" alt="" class="img-fluid rounded">
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="card-img py-3">
+                            <img src="img/submarine.png" alt="" class="img-fluid rounded">
+                        </div>
+                    </div>
+                </div>
+            
+                    </div>
+                </div>
+               
             </div>
         </section>
 
