--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
                         <!-- immagini -->
                         <div class="row">
-                            <div class="col-lg-4 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="card-img py-3 position-relative">
                                     <img src="img/cabin.png" alt="" class="img-fluid rounded">
 
@@ -99,7 +99,7 @@
                                 </div>
 
                             </div>
-                            <div class="col-lg-4 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="card-img py-3 position-relative">
                                     <img src="img/cake.png" alt="" class="img-fluid rounded">
 
@@ -110,7 +110,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="card-img py-3 position-relative">
                                     <img src="img/circus.png" alt="" class="img-fluid rounded">
 
@@ -122,7 +122,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-lg-4 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="card-img py-3 position-relative">
                                     <img src="img/game.png" alt="" class="img-fluid rounded">
 
@@ -133,7 +133,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="card-img py-3 position-relative">
                                     <img src="img/safe.png" alt="" class="img-fluid rounded">
 
@@ -144,7 +144,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="card-img py-3 position-relative">
                                     <img src="img/submarine.png" alt="" class="img-fluid rounded">
 
@@ -347,7 +347,7 @@
         <div class="bot-footer my-bg-botfooter">
             <div class="container">
                 <div class="row justify-content-center py-5">
-                    <div class="col-lg-3 col-sm-5">
+                    <div class="col-lg-3 col-sm-5 text-center">
                         <span class="fs-6">Copyright © Your Website 2019</span>
                     </div>
                 </div>
