--- a/index.html
+++ b/index.html
@@ -18,9 +18,22 @@
 
 <body>
     <header class="my-bg-botfooter text-light">
-        <nav class="container p-3">
-            navbar
-        </nav>
+            <nav data-bs-theme="dark" class="navbar navbar-expand-lg container py-3 my-bg-botfooter text-white">
+                <div class="container">
+                  <a class="navbar-brand" href="#">Start Boostrap</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link" href="#">Features</a>
+                      <a class="nav-link" href="#">Pricing</a>
+                      <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    </div>
+                  </div>
+                </div>
+              </nav>
     </header>
 
     <!-- --------------------------------------------
@@ -237,35 +250,25 @@
                             <div class="row justify-content-center">
                                 <div class="col-10">
                                     <div class="">
-                                        <span
-                                            class="placeholder bg-transparent text-black border-bottom border-black col-12 py-2">Name</span>
+                                       <input type="text" class="form-control my-border-placeholder" placeholder="Name">
                                     </div>
                                 </div>
 
                                 <div class="col-10">
                                     <div class="">
-                                        <span
-                                            class="placeholder bg-transparent text-black border-bottom border-black col-12 py-2">Email
-                                            Adress</span>
+                                        <input type="text" class="form-control my-border-placeholder" placeholder="Email Address">
                                     </div>
                                 </div>
 
                                 <div class="col-10">
                                     <div class="">
-                                        <span
-                                            class="placeholder bg-transparent text-black border-bottom border-black col-12 py-2">Phone
-                                            Number</span>
+                                        <input type="text" class="form-control my-border-placeholder" placeholder="Phone Number">
                                     </div>
                                 </div>
 
                                 <div class="col-10">
                                     <div class="">
-                                        <span
-                                            class="placeholder bg-transparent text-black border-bottom border-black col-12 py-2 pb-5">Message
-                                            <br>
-                                            <br>
-                                            <br>
-                                        </span>
+                                        <input type="text" class="form-control my-border-placeholder my-message" placeholder="Message">
                                     </div>
 
                                     <div class="py-3">
